# visual_functionalities

./: CMakeLists.txt  package.xml
include/visual_functionalities/: lib_recording.hpp  visual_functionalities.hpp  visual_values.hpp
launch/: run_calibration.launch  run_services.launch  run_visual_functionalities.launch  test_visual_functionalities.launch
launch/params/: global_params.yml
msg/: object_blob_position.msg  object_qr_position.msg
src/: run_visual_functionalities.cpp  test_visual_functionalities.cpp  visual_functionalities.cpp
src/lib/: lib_recording.cpp  visual_values.hpp
src/libs/: lib_recording.cpp
src/services/: get_real_object_state_service.cpp
srv/: GetObjectStateQr.srv  object_detection_by_blobs.srv
